# evolmod-template

./: README.md  meson.build  meson_options.txt  module.lua
meta/: evmod.configvars  evmod.events  evmod.namespaces  evmod.types
src/: template.c
subprojects/: evol.wrap
